# Velkor

./: .gitignore  Makefile  VelkorHavoc.py
Agent/: .gitignore  CMakeLists.txt  Linker.ld
Agent/Include/: Communication.h  Defines.h  Evasion.h  Ground.h  Misc.h  Native.h  Velkor.h
Agent/Source/: Entry.cc  Main.cc
Agent/Source/Asm/: Velkor.x64.asm  Velkor.x86.asm
Agent/Source/Communication/: Package.cc  Web.cc
Agent/Source/Evasion/: Coff.cc  Injection.cc  SleepObf.cc  StackSpf.cc  Syscall.cc
Agent/Source/Misc/: Auxiliars.cc  Core.cc  Ground.cc  TaskManager.cc
Havoc/: VelkorTasks.py  agent.py  service.py
Loader/: CMakeLists.txt
Loader/Include/: Ground.h  VelkorShell.h
Loader/Source/: Entry.cc  Ground.cc  Injection.cc
Loader/Source/Main/: DllMain.cc  ExeMain.cc
Modules/: CMakeLists.txt  ExtractSc.py  Linker.ld  template.h
Modules/Include/: Deps.h  General.h
Modules/Source/: Auxiliars.cc  MainTemplate.cc
Modules/Source/Asm/: Entry.x64.asm
Scripts/: Extract.py
